// proto/vector_db.proto
syntax = "proto3";

package edge;

import "google/protobuf/struct.proto";

service Edge {
  rpc CreateCollection(CreateCollectionRequest) returns (CreateCollectionResponse);
  rpc DeleteCollection(DeleteCollectionRequest) returns (DeleteCollectionResponse);
  rpc GetCollection(GetCollectionRequest) returns (GetCollectionResponse);

  rpc AddEmbedding(AddEmbeddingRequest) returns (AddEmbeddingResponse);
  rpc UpdateEmbedding(UpdateEmbeddingRequest) returns (UpdateEmbeddingResponse);
  rpc RemoveEmbedding(RemoveEmbeddingRequest) returns (RemoveEmbeddingResponse);

  rpc SearchVectors(SearchVectorsRequest) returns (SearchVectorsResponse);
  rpc SearchFilters(SearchFiltersRequest) returns (SearchFiltersResponse);
  rpc SearchHybrid(SearchHybridRequest) returns (SearchHybridResponse);
}

message CreateCollectionRequest {
  string name = 1;
  uint32 dimension = 2;
  Distance distance = 3;
  repeated string metadata_fields = 4; 
}

message CreateCollectionResponse {
  bool success = 1;
}

message DeleteCollectionRequest {
  string name = 1;
}

message DeleteCollectionResponse {
  bool success = 1;
}

message GetCollectionRequest {
  string name = 1;
}

message GetCollectionResponse {
  Collection collection = 1;
}

message AddEmbeddingRequest {
  string collection_name = 1;
  Embedding embedding = 2;
}

message AddEmbeddingResponse {
  uint64 id = 1;
}

message UpdateEmbeddingRequest {
  string collection_name = 1;
  Embedding embedding = 2;
}

message UpdateEmbeddingResponse {
  bool success = 1;
}

message RemoveEmbeddingRequest {
  string collection_name = 1;
  uint64 id = 2;
}

message RemoveEmbeddingResponse {
  bool success = 1;
}

message SearchVectorsRequest {
  string collection_name = 1;
  repeated float query = 2;
  uint32 k = 3;
}

message SearchVectorsResponse {
  repeated SimilarityResult results = 1;
}

message SearchFiltersRequest {
  string collection_name = 1;
  google.protobuf.Struct filters = 2; 
  uint32 k = 3;
}

message SearchFiltersResponse {
  repeated SimilarityResult results = 1;
}

message SearchHybridRequest {
  string collection_name = 1;
  repeated float query = 2;
  google.protobuf.Struct filters = 3; 
  uint32 k = 4;
}

message SearchHybridResponse {
  repeated SimilarityResult results = 1;
}

//////////////////////////
// Support
//////////////////////////

message Embedding {
  uint64 id = 1;
  repeated float vector = 2;
  google.protobuf.Struct metadata = 3; // 동적 메타데이터
}

message Collection {
  string name = 1;
  uint32 dimension = 2;
  Distance distance = 3;
}

message SimilarityResult {
  float score = 1;
  Embedding embedding = 2;
}

enum Distance {
  EUCLIDEAN = 0;
  COSINE = 1;
  DOT_PRODUCT = 2;
}
